--- a/Accounts/CMakeLists.txt
+++ b/Accounts/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(sub::Accounts ALIAS ${PROJECT_NAME})
 target_include_directories(${PROJECT_NAME}
     PRIVATE ${PROJECT_SOURCE_DIR}/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../PhoneNumber/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/../Server/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../Preprocessor
     PUBLIC D:/vs/newlibs/asio-1.18.0/include
 )
