change cmake files

--- a/Cryptography/CMakeLists.txt
+++ b/Cryptography/CMakeLists.txt
@@ -9,11 +9,10 @@ add_library(sub::Crypto ALIAS ${PROJECT_NAME})
 
 target_include_directories(${PROJECT_NAME}
     PRIVATE ${PROJECT_SOURCE_DIR}/include
-    PRIVATE D:/vs/newlibs/openssl64a/include
+    PUBLIC D:/vs/newlibs/openssl64a/include
 )
-
-find_library(openSSL NAMES test HINTS D:/vs/newlibs/openssl64a/lib)
-target_link_libraries(${PROJECT_NAME} ${openSSL})
+target_link_directories(${PROJECT_NAME} PUBLIC D:/vs/newlibs/openssl64a/lib)
+target_link_libraries(${PROJECT_NAME} libcrypto.lib libssl.lib)
 
 install(TARGETS ${PROJECT_NAME}
     DESTINATION ${PROJECT_SOURCE_DIR}/../lib
