--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,12 +1,14 @@
+cmake_minimum_required(VERSION 3.10)
 project(Main)
 
 add_executable(${PROJECT_NAME} main.cpp)
 
 target_link_libraries(${PROJECT_NAME}
-    sub::PhoneNumber
-    sub::Accounts
-    sub::Server
+    PRIVATE sub::PhoneNumber
+    PRIVATE sub::Accounts
+    PRIVATE sub::Server
 )
+
 install(TARGETS ${PROJECT_NAME}
     DESTINATION ${PROJECT_SOURCE_DIR}/../bin
 )
