--- a/Accounts/CMakeLists.txt
+++ b/Accounts/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.10)
 project(Accounts)
 
 set(SOURCES
@@ -9,11 +10,17 @@ set(SOURCES
 add_library(${PROJECT_NAME} ${SOURCES})
 add_library(sub::Accounts ALIAS ${PROJECT_NAME})
 
+target_link_libraries(${PROJECT_NAME}
+    PUBLIC sub::Crypto
+    PUBLIC sub::PhoneNumber
+)
+
 target_include_directories(${PROJECT_NAME}
-    PRIVATE ${PROJECT_SOURCE_DIR}/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../PhoneNumber/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../Server/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../Preprocessor
+    PUBLIC ${PROJECT_SOURCE_DIR}/../Cryptography/include
     PUBLIC D:/vs/newlibs/asio-1.18.0/include
 )
 
