--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
 project(server VERSION 0.9.1)
-
 
 set(project_version ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 configure_file(
@@ -9,8 +8,7 @@ configure_file(
 )
 
 add_subdirectory(PhoneNumber)
+add_subdirectory(Cryptography)
 add_subdirectory(Accounts)
 add_subdirectory(Server)
-
 add_subdirectory(Main)
-
