--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.10)
 project(Server)
 
 set(SOURCES
@@ -5,16 +6,19 @@ set(SOURCES
     src/AccountFactory.cpp
     src/Server.cpp
 )
+
 add_library(${PROJECT_NAME} ${SOURCES})
 add_library(sub::Server ALIAS ${PROJECT_NAME})
+
+target_link_libraries(${PROJECT_NAME}
+    PUBLIC sub::Accounts
+)
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../Accounts/include
-    PUBLIC ${PROJECT_SOURCE_DIR}/../Preprocessor
-    PUBLIC ${PROJECT_SOURCE_DIR}/../PhoneNumber/include
-    PUBLIC D:/vs/newlibs/asio-1.18.0/include
 )
+
 install(TARGETS ${PROJECT_NAME}
     DESTINATION ${PROJECT_SOURCE_DIR}/../lib
 )
