fix cmake error

--- a/server_messenger/main/CMakeLists.txt
+++ b/server_messenger/main/CMakeLists.txt
@@ -3,6 +3,8 @@ project(Main)
 
 add_executable(${PROJECT_NAME} main.cpp)
 
+target_link_libraries(Main PRIVATE crypt32)
+
 target_link_libraries(${PROJECT_NAME}
     PRIVATE sub::PhoneNumber
     PRIVATE sub::Accounts
