--- a/client_messenger/Error/CMakeLists.txt
+++ b/client_messenger/Error/CMakeLists.txt
@@ -15,3 +15,6 @@ target_include_directories(${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../Console/include
 )
+install(TARGETS ${PROJECT_NAME}
+    DESTINATION ${PROJECT_SOURCE_DIR}/../lib
+)
