generating a server startup help file

--- a/server_messenger/main/CMakeLists.txt
+++ b/server_messenger/main/CMakeLists.txt
@@ -14,3 +14,20 @@ target_link_libraries(${PROJECT_NAME}
 install(TARGETS ${PROJECT_NAME}
     DESTINATION ${PROJECT_SOURCE_DIR}/../bin
 )
+file(WRITE ${PROJECT_SOURCE_DIR}/../bin/start_help.txt 
+"Запуск сервера
+Параметры запуска
+[program_name.exe] [number of threads with I\\O] [ip] [port]
+[number of threads with I\\O] - количество потоков для I\\O context
+[ip] - ip на котором будет работать сервер
+[port] - port на котором будет работать сервер\n
+Указывать параметры через пробел без скобок\n
+Вариации запуска
+- Все параметры [program_name.exe] [number of threads with I\\O] [ip] [port]
+- Количество потоков [program_name.exe] [number of threads with I\\O]
+- Без параметров [program_name.exe]\n
+Параметры по умолчанию
+[number of threads with I\\O] - 12
+[ip] - 127.0.0.1
+[port] - 8080"
+)
