--- a/server_messenger/CMakeLists.txt
+++ b/server_messenger/CMakeLists.txt
@@ -8,6 +8,7 @@ configure_file(
 )
 
 add_subdirectory(PhoneNumber)
+add_subdirectory(ThreadPool)
 add_subdirectory(Cryptography)
 add_subdirectory(Accounts)
 add_subdirectory(Server)
