--- a/server_messenger/ThreadPool/CMakeLists.txt
+++ b/server_messenger/ThreadPool/CMakeLists.txt
@@ -7,7 +7,9 @@ add_library(sub::ThreadPool ALIAS ${PROJECT_NAME})
 target_include_directories(${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}/include
 )
-
+target_include_directories(${PROJECT_NAME}
+    PUBLIC ${PROJECT_SOURCE_DIR}/../Preprocessor
+)
 install(TARGETS ${PROJECT_NAME}
     DESTINATION ${PROJECT_SOURCE_DIR}/../lib
 )
