fix cmake error client_messenger

--- a/client_messenger/ChatManager/CMakeLists.txt
+++ b/client_messenger/ChatManager/CMakeLists.txt
@@ -12,11 +12,13 @@ add_library(sub::ChatManager ALIAS ${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME}
     PUBLIC sub::Console
     PUBLIC sub::Error
+    PUBLIC sub::FileWork
 )
 target_include_directories(${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../Console/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../Error/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/../FileWork/include
     PUBLIC D:/vs/newlibs/asio-1.18.0/include
 )
 install(TARGETS ${PROJECT_NAME}
