--- a/client_messenger/CMakeLists.txt
+++ b/client_messenger/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
+set(CMAKE_CXX_STANDARD 17)
 project(server VERSION 0.4.0)
 
 set(project_version ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
@@ -7,6 +8,7 @@ configure_file(
     ${PROJECT_SOURCE_DIR}/main/version.hpp
 )
 
+add_subdirectory(FileWork)
 add_subdirectory(Account)
 add_subdirectory(ChatManager)
 add_subdirectory(Console)
