--- a/client_messenger/Console/CMakeLists.txt
+++ b/client_messenger/Console/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(Console)
 
 set(SOURCES
-    src/Console.cpp
+    src/console.cpp
 )
 
 add_library(${PROJECT_NAME} ${SOURCES})
