--- a/client_messenger/FileWork/CMakeLists.txt
+++ b/client_messenger/FileWork/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_CXX_STANDARD 17)
 project(FileWork)
 
 set(SOURCES
-    src/FileWork.cpp
+    src/file_work.cpp
 )
 
 add_library(${PROJECT_NAME} ${SOURCES})
