--- a/server_messenger/ThreadPool/CMakeLists.txt
+++ b/server_messenger/ThreadPool/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(ThreadPool)
 
-add_library(${PROJECT_NAME} src/ThreadPool.cpp)
+add_library(${PROJECT_NAME} src/thread_pool.cpp)
 add_library(sub::ThreadPool ALIAS ${PROJECT_NAME})
 
 target_include_directories(${PROJECT_NAME}
