File database start

--- a/server_messenger/Server/CMakeLists.txt
+++ b/server_messenger/Server/CMakeLists.txt
@@ -20,6 +20,7 @@ target_include_directories(${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../Accounts/include
     PUBLIC ${PROJECT_SOURCE_DIR}/../ThreadPool/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/../Files
 )
 
 install(TARGETS ${PROJECT_NAME}
