--- a/client_messenger/CMakeLists.txt
+++ b/client_messenger/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 17)
 project(server VERSION 0.4.0)
 
+set(BOOST_ASIO_INCLUDE "PATH/TO/asio/include")
+
 set(project_version ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 configure_file(
     ${PROJECT_SOURCE_DIR}/main/version.hpp.in
